k8s/service-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: sentinel-poc-public
  namespace: sentinel-poc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: sentinel-poc
